# abbp

./: CMakeLists.txt  README.md  build.sh
app/: main.cpp
app/web_app/: template.html
common/: abbp.h  byte_stream_reader.cpp  byte_stream_reader.h  reader.h  vector_subbyte_reader.cpp  vector_subbyte_reader.h
hevc/: hevc_nal_unit.cpp  hevc_nal_unit.h  hevc_nal_unit_header.cpp  hevc_nal_unit_header.h  hevc_parser.c  hevc_parser.cpp  hevc_parser.h
hevc/js_wrapper/: hevc_wrapper.cpp
hevc/rbsp/: video_parameter_set_rbsp.cpp  video_parameter_set_rbsp.h
